--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "devDependencies": {
         "grunt": "~0.4.1",
         "grunt-contrib-jshint": "~0.7.0",
-        "grunt-jsonlint": "~1.0.1"
+        "grunt-jsonlint": "~1.0.1",
+        "grunt-contrib-nodeunit": "~0.2.2"
     }
 }
