--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git@github.com:axyjs/node-custom-errors.git"
+        "url": "https://github.com/axyjs/node-custom-errors.git"
     },
     "keywords": [
         "javascript",
@@ -30,5 +30,10 @@
         "grunt-contrib-jshint": "~0.7.0",
         "grunt-jsonlint": "~1.0.1",
         "grunt-contrib-nodeunit": "~0.2.2"
-    }
+    },
+    "main": "./src/customErrors",
+    "engines": {
+        "node": "*"
+    }    
 }
+
