package.json: add LICENSE to package

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "node": "*"
     },
     "files": [
-        "lib/customErrors.js"
+        "lib/customErrors.js",
+        "LICENSE"
     ],
     "scripts": {
         "test": "grunt test hint"
