--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-custom-errors",
     "title": "Node.js custom errors",
-    "description": "Creating custom exception classes (node.js)",
+    "description": "Creating custom exception classes",
     "version": "0.1.1",
     "homepage": "https://github.com/axyjs/node-custom-errors",
     "author": {
